#############################################################################
### General Build Configuration Parameters

# To build with debug symbols set DEBUG = 1
DEBUG = 0 
#CRUNTIME Library (Use /MD or /MT)
CRUNTIME=/MT
# Visual Studio version
EMBED_MANIFEST=0
# Build with thread safety
ZTS =1
#############################################################################
### WSF/C Build Configuration Parameters

# Path to libxml2 installation
LIBXML2_BIN_DIR = E:\libxml2-2.6.30.win32

# Path to iconv installation
ICONV_BIN_DIR = E:\iconv-1.9.2.win32

# Enable/disable SSL client transport, to enable set ENABLE_SSL = 1
ENABLE_SSL = 1
# Path to OpenSSL installation, required if SSL transport is enabled 
#( Use OpenSSL .98e or above MSI installer )
OPENSSL_BIN_DIR = E:\OpenSSL

#############################################################################
# Configuration for building wsf/php extension using its own build
PHP_SRC_DIR = E:\php\php-5.2.5
PHP_BIN_DIR = E:\php\php-5.2.5-Win32
WIN32BUILD_DIR = E:\php\win32build

