#############################################################################
### General Build Configuration Parameters

# To build with debug symbols set DEBUG = 1
DEBUG = 1

#CRUNTIME Library ( Use /MD or /MT)
CRUNTIME=/MT

# Visual Studio version
EMBED_MANIFEST=1

#############################################################################
### WSF/C Build Configuration Parameters

# Path to libxml2 installation
LIBXML2_BIN_DIR=E:\libxml2-2.6.30.win32

# Path to iconv installation
ICONV_BIN_DIR=E:\iconv-1.9.2.win32

# Path to libxslt installation
LIBXSLT_BIN_DIR=E:\libxslt-1.1.17.win32

# Enable/disable SSL client transport, to enable set ENABLE_SSL = 1
ENABLE_SSL = 0

# Path to OpenSSL installation, required if SSL transport is enabled
#OPENSSL_BIN_DIR = E:\OpenSSL

# Enable/disable Guththila parser, to enable set ENABLE_GUTHTHILA = 1
ENABLE_GUTHTHILA = 0

# Path to OpenSSL installation
OPENSSL_BIN_DIR = E:\OpenSSL


