lib_LTLIBRARIES=libwso2_wsf.la

libwso2_wsf_la_SOURCES= AxisFault.cpp \
			Exception.cpp \
			OMAttribute.cpp \
			OMElement.cpp \
			OMNode.cpp \
			Options.cpp \
			ServiceClient.cpp \
			WSSOAPClient.cpp \
			AxisObject.cpp \
			OMDataHandler.cpp \
			OMNamespace.cpp \
			OMText.cpp \
			Property.cpp \
			WSRESTClient.cpp \
			NeethiPolicy.cpp

INCLUDES = -I$(top_builddir)/include \
		@AXIS2INC@


