lib_LTLIBRARIES=libwso2_wsf.la

libwso2_wsf_la_SOURCES= AxisFault.cpp \
			Exception.cpp \
			OMAttribute.cpp \
			OMElement.cpp \
			OMNode.cpp \
			Options.cpp \
			ServiceClient.cpp \
			WSSOAPClient.cpp \
			AxisObject.cpp \
			OMDataHandler.cpp \
			OMNamespace.cpp \
			OMText.cpp \
			Property.cpp \
			WSRESTClient.cpp \
			NeethiPolicy.cpp \
			NeethiException.cpp \
			NeethiObject.cpp \
			OMException.cpp \
			OMObject.cpp

INCLUDES = -I ../include \
		-I ../wsf_c/axis2c/include \
		-I ../wsf_c/axis2c/neethi/include \
		-I ../wsf_c/axis2c/axiom/include \
		-I ../wsf_c/axis2c/util/include \
		-I ../wsf_c/rampartc/include \
		-I ../wsf_c/sandesha2c/include \
		-I ../wsf_c/savanc/include 


EXTRA_DIST=wsf.mk wsf.rc
