samplesdir=$(prefix)/bin/samples/wsclient
bindir=$(prefix)/bin/samples/wsclient
bin_SCRIPTS=echo.sh flicker_rest_photo_search.sh flicker_soap_photo_search.sh echo_rest.sh flicker_rest_echo.sh flicker_soap_echo.sh echo.bat flicker_rest_photo_search.bat flicker_soap_photo_search.bat echo_rest.bat flicker_rest_echo.bat flicker_soap_echo.bat

SUBDIRS=data
EXTRA_DIST=echo.sh flicker_rest_photo_search.sh flicker_soap_photo_search.sh echo_rest.sh flicker_rest_echo.sh flicker_soap_echo.sh echo.bat flicker_rest_photo_search.bat flicker_soap_photo_search.bat echo_rest.bat flicker_rest_echo.bat flicker_soap_echo.bat

