noinst_LTLIBRARIES = libauthentication.la

libauthentication_la_SOURCES =  axis2_skel_AuthenticationAdminService.c \
								codegen/adb_AccessControlAdmin.c \
								codegen/adb_ExceptionE0.c \
								codegen/adb_loginResponse.c \
								codegen/adb_UserStoreAdmin.c \
								codegen/adb_AuthenticationException.c \
								codegen/adb_loginWithDelegation.c \
								codegen/adb_AuthenticationExceptionE1.c \
								codegen/adb_getSystemPermissionOfUser.c \
								codegen/adb_UserStoreReader.c \
								codegen/adb_loginWithDelegationResponse.c \
								codegen/adb_getSystemPermissionOfUserResponse.c \
								codegen/adb_Authenticator.c \
								codegen/adb_ProfileConfiguration.c \
								codegen/axis2_extension_mapper.c \
								codegen/adb_getUserPermissions.c \
								codegen/adb_Authorizer.c \
								codegen/adb_UserClaimsAdmin.c \
								codegen/adb_getUserPermissionsResponse.c \
								codegen/axis2_svc_skel_AuthenticationAdminService.c \
								codegen/adb_Claim.c \
								codegen/adb_UserProfileAdmin.c \
								codegen/adb_login.c \
								codegen/adb_Exception.c \
								codegen/adb_UserRealm.c
libauthentication_la_LIBADD = 

INCLUDES = -I$(top_builddir)/include \
			-I. \
			@AXIS2INC@ \
		   	@AXIOMINC@ \
		   	@NEETHIINC@ \
		   	@UTILINC@

EXTRA_DIST=
