noinst_LTLIBRARIES = liblogging_admin.la

liblogging_admin_la_SOURCES = axis2_skel_LoggingAdmin.c \
							  codegen/adb_AppenderData.c \
							  codegen/adb_getAllLoggerDataResponse.c \
							  codegen/adb_getLoggerDataResponse.c \
							  codegen/adb_updateAllAppenderData.c \
							  codegen/axis2_svc_skel_LoggingAdmin.c \
							  codegen/adb_Exception.c \
							  codegen/adb_getAppenderData.c \
							  codegen/adb_getSystemLogResponse.c \
							  codegen/adb_updateLoggerData.c \
							  codegen/adb_ExceptionE0.c \
							  codegen/adb_getAppenderDataResponse.c \
							  codegen/adb_LogData.c \
							  codegen/adb_updateSystemLog.c \
							  codegen/adb_getAllLoggerData.c \
							  codegen/adb_getLoggerData.c \
							  codegen/adb_LoggerData.c \
							  codegen/axis2_extension_mapper.c 
liblogging_admin_la_LIBADD = 

INCLUDES = -I$(top_builddir)/include \
			-I. \
			@AXIS2INC@ \
		   	@AXIOMINC@ \
		   	@NEETHIINC@ \
		   	@UTILINC@

EXTRA_DIST= logging_admin/codegen/adb_AppenderData.h logging_admin/codegen/adb_getAppenderData.h logging_admin/codegen/adb_LogData.h logging_admin/codegen/axis2_extension_mapper.h logging_admin/codegen/adb_ExceptionE0.h logging_admin/codegen/adb_getAppenderDataResponse.h logging_admin/codegen/adb_LoggerData.h logging_admin/codegen/axis2_skel_LoggingAdmin.h logging_admin/codegen/adb_Exception.h logging_admin/codegen/adb_getLoggerData.h logging_admin/codegen/adb_updateAllAppenderData.h logging_admin/codegen/adb_getAllLoggerData.h logging_admin/codegen/adb_getLoggerDataResponse.h logging_admin/codegen/adb_updateLoggerData.h logging_admin/codegen/adb_getAllLoggerDataResponse.h logging_admin/codegen/adb_getSystemLogResponse.h logging_admin/codegen/adb_updateSystemLog.h
